# vakil_app

./: .clinerules  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260314_1634_ad0555a5597f_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: admin.py  drafting.py  router.py
backend/app/models/: __init__.py  case.py  client_statement.py  document.py  draft_petition.py  embedding.py  hearing.py  lawyer_template.py  legal_document.py  party.py  user.py
backend/app/services/: document_extraction_service.py  draft_service.py  fact_extraction_service.py  llm_service.py  model_router.py  rag_service.py  sarvam_service.py  sarvam_translate_service.py  template_service.py
backend/app/utils/: logging.py
frontend/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/draft/: page.tsx
frontend/src/app/facts/: page.tsx
frontend/src/app/record/: page.tsx
scripts/: init-db.sql  seed_statutes.py
