[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vakil-backend"
version = "0.1.0"
description = "Legal-CoPilot Backend — FastAPI service for case management + RAG"
requires-python = ">=3.11"

dependencies = [
    # --- Web Framework ---
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.12",       # file uploads

    # --- Database ---
    "sqlmodel==0.0.21",               # SQLAlchemy + Pydantic hybrid ORM
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",                # async PostgreSQL driver
    "alembic==1.13.3",
    "pgvector==0.3.2",                # pgvector SQLAlchemy type

    # --- Auth & Security ---
    "python-jose[cryptography]==3.3.0",  # JWT
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.1",           # AES-256-GCM for document encryption

    # --- Config ---
    "pydantic-settings==2.5.2",

    # --- Object Storage (MinIO/S3) ---
    "boto3==1.35.36",
    "aiobotocore==2.15.1",

    # --- Task Queue ---
    "celery[redis]==5.4.0",
    "redis==5.1.1",

    # --- AI/RAG ---
    "llama-index==0.11.13",
    "llama-index-vector-stores-postgres==0.2.4",
    "llama-index-embeddings-openai==0.2.5",
    "llama-index-llms-openai==0.2.9",
    "openai==1.51.0",

    # --- OCR ---
    "azure-ai-documentintelligence==1.0.0",
    "google-cloud-documentai==2.30.0",

    # --- HTTP Client ---
    "httpx==0.27.2",

    # --- Logging ---
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",                  # TestClient async support
    "factory-boy==3.3.1",
    "faker==30.3.0",

    # --- Linting / Formatting ---
    "ruff==0.6.9",
    "mypy==1.11.2",

    # --- Type stubs ---
    "types-passlib==1.7.7.20240819",
    "types-redis==4.6.0.20241004",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]   # allow assert in tests

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "T20"]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "tests/*"]