[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vakil-backend"
version = "0.1.0"
description = "Legal-CoPilot Backend — FastAPI service for case management + RAG"
requires-python = ">=3.11"

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.111.0,<0.116.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "python-multipart>=0.0.9",

    # --- Database ---
    "sqlmodel>=0.0.18,<0.1.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.0,<1.14.0",
    "pgvector>=0.3.0,<0.4.0",

    # --- Auth & Security ---
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "cryptography>=42.0.0,<44.0.0",

    # --- Config ---
    "pydantic-settings>=2.3.0,<3.0.0",

    # --- Object Storage ---
    "boto3>=1.34.0,<2.0.0",

    # --- Task Queue ---
    "redis>=5.0.0,<6.0.0",

    # --- AI / LLM ---
    # Groq — free API (get key at console.groq.com, 30 seconds, no credit card)
    "groq>=0.11.0,<1.0.0",

    # --- Embeddings (fastembed — ONNX, ~100MB, no torch, no API key) ---
    "fastembed>=0.3.0,<0.5.0",

    # --- PDF Processing ---
    "pypdf>=4.0.0,<5.0.0",

    # --- Audio Processing (webm → wav conversion for Sarvam AI) ---
    "pydub>=0.25.1,<0.26.0",

    # --- HTTP Client ---
    "httpx>=0.27.0,<0.28.0",

    # --- Logging ---
    "structlog>=24.0.0,<25.0.0",

    # --- Numpy (required by fastembed) ---
    "numpy>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=30.0.0,<31.0.0",
    "ruff>=0.6.0,<0.7.0",
    "mypy>=1.11.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "tests/*"]